syntax = "proto3";
package gpio;

import "google/protobuf/empty.proto";

service Gpio {
    rpc UpdateLedStatus (UpdateLedStatusRequest) returns (UpdateLedStatusResponse);
    rpc GetDeviceInfo (google.protobuf.Empty) returns (DeviceInfoResponse);
    rpc GetDeviceModel (google.protobuf.Empty) returns (DeviceModelResponse);
}

enum CommandType {
    SWITCH = 0;
    BLINK = 1;
}

message UpdateLedStatusRequest {
    uint32 pin = 1;
    uint64 duration   = 2;
    CommandType command_type   = 3;
}

message UpdateLedStatusResponse {
    bool   successful = 1;
    string message    = 2;
}

message DeviceInfoResponse {
    message Payload {
        string gpio = 1;
        string mode = 2;
        string level = 3;
        string pin = 4;
    }
    repeated Payload payloads = 2;
}

message DeviceModelResponse {
    string message = 1;
}

