syntax = "proto3";
package gpio;

service Gpio {
    rpc ToggleLed (LedRequest) returns (LedResponse);
    rpc PrintStatus (StatusRequest) returns (StatusResponse);
}

enum CommandType {
    SWITCH = 0;
    BLINK = 1;
}

message LedRequest {
    uint32 pin = 1;
    uint64 duration   = 2;
    CommandType command_type   = 3;
}

message LedResponse {
    bool   successful = 1;
    string message    = 2;
}

message StatusRequest {}

message StatusResponse {
    message Payload {
        string gpio = 1;
        string mode = 2;
        string level = 3;
        string pin = 4;
    }
    bool successful = 1;
    repeated Payload payloads = 2;
}

